log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output
  namespace: exercises
  labels:
    app: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - name: http
      port: 8080
      targetPort: 8080
